hw-2: исправление замечаний spotbugs