@@ -70,7 +70,7 @@ public class LinkUpdaterScheduler {
     private void notifyBot(URI url, String description, List<Link> links) {
         List<Long> chatIds = links.stream().map(Link::chatId).toList();
 
-        Long linkId = links.isEmpty() ? 0L : links.get(0).id();
+        Long linkId = links.isEmpty() ? Long.valueOf(0L) : links.getFirst().id();
 
         botNotificationClient.sendUpdate(new LinkUpdate(linkId, url, description, chatIds));
     }
